# mgot-tests

./: .gitignore  README.md  conftest.py  dockerfile  main.py  main_streams.py  pyproject.toml
fixtures/: bar_sequences.py  contiguous_1h_dataset.json  production_data.json  test_data_generator.py
performance/: benchmark.py
regression/: test_mth_baseline.py
regression/snapshots/: mth_zones_baseline.json  origin_zones_baseline.json  peaks_baseline.json  squeeze_zones_baseline.json
